Perltidy Change Log
  2013 08 06
      - Fixed RT #87107, spelling

  2013 08 05
      - Fixed RT #87502, incorrect of parsing of smartmatch before hash brace
  
      - Added feature request RT #87330, trim whitespace after POD.
        The flag -trp (--trim-pod) will trim trailing whitespace from lines of POD

  2013 07 17
      - Fixed RT #86929, #86930, missing lhs of assignment.

      - Fixed RT #84922, moved pod from Tidy.pm into Tidy.pod

  2012 12 07
     - The flag -cab=n or --comma-arrow-breakpoints=n has been generalized
       to give better control over breaking open short containers.  The
       possible values are now:

         n=0 break at all commas after =>  
         n=1 stable: break at all commas after => if container is open,
             EXCEPT FOR one-line containers
         n=2 break at all commas after =>, BUT try to form the maximum
             maximum one-line container lengths
         n=3 do not treat commas after => specially at all 
         n=4 break everything: like n=0 but also break a short container with
             a => not followed by a comma
         n=5 stable: like n=1 but ALSO break at open one-line containers (default)

       New values n=4 and n=5 have been added to allow short blocks to be
       broken open.  The new default is n=5, stable.  It should more closely
       follow the breaks in the input file, and previously formatted code
       should remain unchanged.  If this causes problems use -cab=1 to recover 
       the former behavior.  Thanks to Tony Maszeroski for the suggestion.

       To illustrate the need for the new options, if perltidy is given
       the following code, then the old default (-cab=1) was to close up 
       the 'index' container even if it was open in the source.  The new 
       default (-cab=5) will keep it open if it was open in the source.

        our $fancypkg = {
            'ALL' => {
                'index' => {
                    'key' => 'value',
                },