@@ -3093,7 +3093,7 @@ perlstyle(1), Perl::Tidy(3)
 
 =head1 VERSION
 
-This man page documents perltidy version 20130806.
+This man page documents perltidy version 20130922.
 
 =head1 CREDITS
 
